added Brem data

--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 97,
    "id": "802f7e15",
    "metadata": {},
    "outputs": [],
@@ -77,12 +77,12 @@
    "metadata": {},
    "source": [
     "#### Plasma losses\n",
-    "Coulomb interactions with free thermal electrons. In the limit that the $\\beta$-particle energy far exceeds that of thermal electrons, **Huba2013** gives"
+    "Coulomb interactions with free thermal electrons. In the limit that the $\\beta$-particle energy far exceeds that of thermal electrons, **Huba2013** gives:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 98,
    "id": "a9b43ac5",
    "metadata": {},
    "outputs": [],
@@ -104,6 +104,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f93db20e",
+   "metadata": {},
+   "source": [
+    "This assumes that the dominating interactions are electron/electron (ignoring electron/ion interactions). This depends on the density of free thermal electrons, and thus the composition of the medium. It is not clear in Barnes&Kasen2016 whether they assume that all free thermal electrons only come from atoms heavier than hydrogen.\n",
+    "\n",
+    "**The composition does not evolve significantly over the course of 1-10 days.**\n",
+    "\n",
+    "- Inner ejecta: single component mean composition Z=60 A=144\n",
+    "- Outer ejecta: 2-component: Hydrogen Z=1 A=1, heavy elems Z=55 A=133\\\n",
+    "But that hydrogen does not contribute to plasma because it is only singly ionised. Decray of neutrons into protons. A says it should be a small mass component.\n",
+    "\n",
+    "Axelrod has discussion on this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b6f29e9f",
    "metadata": {},
    "source": [
@@ -113,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 99,
    "id": "f1c1b1b9",
    "metadata": {},
    "outputs": [],
@@ -159,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 100,
    "id": "71f052d1",
    "metadata": {},
    "outputs": [],
@@ -186,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 139,
    "id": "c4d84527",
    "metadata": {},
    "outputs": [],
@@ -262,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 140,
    "id": "da1d4ca1",
    "metadata": {},
    "outputs": [
@@ -292,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 141,
    "id": "a060744d",
    "metadata": {},
    "outputs": [],
@@ -311,16 +327,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 142,
    "id": "d0738858",
    "metadata": {},
    "outputs": [],
    "source": [
     "E_beta = np.logspace(-2, 1, 100) # particle kinetic energy (MeV)\n",
     "T = 1e-6 # MeV\n",
-    "z_over_a = 0.4 # 0.4 for inner ejecta\n",
+    "Z = 60  # for inner ejecta\n",
+    "A = 144  #for inner ejecta\n",
     "\n",
-    "n_e = rho_ej / m_p_ *1.e-3  # number density of bound electrons\n",
+    "n_e = rho_ej / (A * m_p_) * (1./Z)  # number density of bound electrons\n",
     "    # elements heavier than H are singly ionized (low temperatures)\n",
     "    # Composition from Barnes+2016 fig.1 (took A_heavy=1.e-3)\n",
     "    # (this can be refined)\n",
@@ -329,8 +346,7 @@
     "gamma_beta = 1 + to_erg(E_beta) / (m_e_ * c_**2)\n",
     "v_beta = np.sqrt(1 - 1./gamma_beta**2) * c_\n",
     "rho = rho_ej\n",
-    "B = 3.7e-6\n",
-    "Z = 60"
+    "B = 3.7e-6"
    ]
   },
   {
@@ -343,14 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 143,
    "id": "1365a0be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_rates(T, rho, B):\n",
+    "def plot_rates(T, rho, B, Z, A):\n",
     "    \n",
-    "    n_eb = calc_n_eb(rho, z_over_a)\n",
+    "    n_eb = calc_n_eb(rho, Z/A)\n",
     "    n_e = rho / m_p_ *1.e-3\n",
     "    \n",
     "    plasma = plasma_losses(E_beta, n_e, T) / rho\n",
@@ -374,14 +390,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 145,
    "id": "0cacf8f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f2e234fc86d4d5b8972788e8f9bc403",
+       "model_id": "01f3963bb436454b8cdc1bb8f8ac5168",
        "version_major": 2,
        "version_minor": 0
       },
@@ -395,7 +411,7 @@
    ],
    "source": [
     "%matplotlib widget\n",
-    "plot_rates(T, rho, B)"
+    "plot_rates(T, rho, B, Z, A)"
    ]
   },
   {
@@ -405,24 +421,28 @@
    "source": [
     "### Parameter exploration\n",
     "\n",
-    "We ll take a look at the losses as a function of $T$, $\\rho$ and $B$."
+    "We ll take a look at the losses as a function of $T$, $\\rho$ and $B$.\n",
+    "\n",
+    "The questions are:\n",
+    "- Can synchrotron dominate at some point in KN evolution?\n",
+    "- Can something else than Synchrotron dominate at some point in GRB afterglows?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 148,
    "id": "d23eedd5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68273308a7644c559665c84c90b9c3ee",
+       "model_id": "78b07a5813e147be87766a418c124a30",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatLogSlider(value=1e-06, description='T', max=0.0, min=-10.0, step=1.0), FloatLogSlid…"
+       "HBox(children=(Output(), VBox(children=(Select(description='Ejecta type', index=1, options=('Hydrogen', 'Inner…"
       ]
      },
      "metadata": {},
@@ -433,20 +453,57 @@
     "%matplotlib inline\n",
     "from ipywidgets import *\n",
     "\n",
-    "def update(T, rho, B):\n",
-    "    plot_rates(T, rho, B)\n",
+    "Tpe = widgets.Select(description='Ejecta type', \n",
+    "                     options=['Hydrogen', 'Inner ejecta'], \n",
+    "                     value='Inner ejecta')\n",
+    "T = widgets.FloatLogSlider(description='T', min=-10, max=0, value=1.e-6, step=1)\n",
+    "rho = widgets.FloatLogSlider(description='rho', min=-18, max=-10, value=1.e-14, step=1)\n",
+    "B = widgets.FloatLogSlider(description='B', min=-10, max=5, value=1.e-6, step=1)\n",
+    "Z = widgets.Dropdown(description='Z', options=[1,60], value=60)\n",
+    "A = widgets.Dropdown(description='A', options=[1,133,144], value=144)\n",
+    "params_ui = widgets.VBox([Tpe, T, rho, B, Z, A])\n",
     "\n",
-    "interact(update, \n",
-    "         T=widgets.FloatLogSlider(min=-10, max=0, value=1.e-6, step=1),\n",
-    "         rho=widgets.FloatLogSlider(min=-18, max=-10, value=1.e-14, step=1),\n",
-    "         B=widgets.FloatLogSlider(min=-10, max=5, value=1.e-6, step=1)\n",
-    "        );"
+    "def update_Z_A(*args):\n",
+    "    if Tpe.value == 'Hydrogen':\n",
+    "        Z.value = 1\n",
+    "        A.value = 1\n",
+    "    if Tpe.value == 'Inner ejecta':\n",
+    "        Z.value = 60\n",
+    "        A.value = 144\n",
+    "    if Tpe.value == 'Outer':\n",
+    "        Z.value = 55\n",
+    "        A.value = 133\n",
+    "Tpe.observe(update_Z_A, 'value')\n",
+    "\n",
+    "def update(Tpe, T, rho, B, Z, A):\n",
+    "    plot_rates(T, rho, B, Z, A)\n",
+    "        \n",
+    "out = widgets.interactive_output(update, {'Tpe':Tpe, 'T': T, 'rho': rho, 'B': B, 'Z':Z, 'A':A})\n",
+    "\n",
+    "ui = widgets.HBox([out, params_ui])\n",
+    "display(ui)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e379a11e",
+   "metadata": {},
+   "source": [
+    "Now we need to evolve this following Meztger review for temperature and density."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1be2958b",
+   "metadata": {},
+   "source": [
+    "A: Goes into homologuous expansion: $\\rho \\propto t^{-3}$. Quentin's work suggests that T might be increasing. In some models. T might go up to $10^{5}K$, but probably not above. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af64ee11",
+   "id": "742e3cc2",
    "metadata": {},
    "outputs": [],
    "source": []
