--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f93db20e",
+   "id": "0e577b44",
    "metadata": {},
    "source": [
     "This assumes that the dominating interactions are electron/electron (ignoring electron/ion interactions). This depends on the density of free thermal electrons, and thus the composition of the medium. It is not clear in Barnes&Kasen2016 whether they assume that all free thermal electrons only come from atoms heavier than hydrogen.\n",
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e379a11e",
+   "id": "4a68b15d",
    "metadata": {},
    "source": [
     "Now we need to evolve this following Meztger review for temperature and density."
@@ -494,16 +494,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1be2958b",
+   "id": "5814cf2e",
    "metadata": {},
    "source": [
     "A: Goes into homologuous expansion: $\\rho \\propto t^{-3}$. Quentin's work suggests that T might be increasing. In some models. T might go up to $10^{5}K$, but probably not above. "
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "835cba68",
+   "metadata": {},
+   "source": [
+    "hello"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "742e3cc2",
+   "id": "3279651f",
    "metadata": {},
    "outputs": [],
    "source": []
