Added Bethe implementations

--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "id": "802f7e15",
    "metadata": {},
    "outputs": [],
@@ -48,6 +48,7 @@
     "import textwrap\n",
     "\n",
     "# Constants\n",
+    "e_ = 4.80320425e-10 # elementary charge (statcoulomb) (CGS)\n",
     "lambda_ee_ = 10  # Coulomb logarithm for electron-electron scattering\n",
     "m_e_ = 9.10938356e-28  # electron mass (g)\n",
     "m_p_ = 1.6726219e-24 # proton mass (g)\n",
@@ -58,6 +59,8 @@
     "Msun_ = 2.0e33 # Solar mass (g)\n",
     "r_0_ = 1.8e-13 # nuclear radius coef for deformed post-scission nuclei (cm)\n",
     "alpha_ = 1./137. # fine structure constant \n",
+    "h_bar_ = 1.0546e-27 # reduced plank constant (cm2 g s-1) (CGS)\n",
+    "eps_0_ = 1. # vacuum permittivity (unity in CGS)\n",
     "\n",
     "delta_ = 1  # power-law profile for inner ejecta (Barnes&Kasen2016)\n",
     "n_ = 1  # power-law profile for outer ejecta (Barnes&Kasen2016)\n",
@@ -82,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "id": "a9b43ac5",
    "metadata": {},
    "outputs": [],
@@ -129,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "id": "f1c1b1b9",
    "metadata": {},
    "outputs": [],
@@ -144,7 +147,7 @@
     "    return(rho / m_u_ * z_over_a)\n",
     "\n",
     "\n",
-    "def IE_losses(E_beta, Ibar, v_beta, n_eb):\n",
+    "def IE_Barnes(E_beta, Ibar, v_beta, n_eb, chi=1, get_name=False):\n",
     "    ''' Returns beta_particle losses due to ionization and excitation\n",
     "    of atomic electrons (MeV/s).\n",
     "    args:\n",
@@ -153,6 +156,11 @@
     "    v_beta = beta-particle speed (cm/s)\n",
     "    n_eb = bound electron number density (cm-3) \n",
     "    '''\n",
+    "    \n",
+    "    _ = chi\n",
+    "    \n",
+    "    if get_name:\n",
+    "        return(\"IE_Barnes\")\n",
     "\n",
     "    tau = to_erg(E_beta) / (m_e_ * c_**2) \n",
     "    g = 1 + tau**2 / 8 - (2*tau+1) * np.log(2)\n",
@@ -161,7 +169,28 @@
     "                + np.log(1 + tau/2) \n",
     "                + (1 - (v_beta/c_)**2) * g)\n",
     "\n",
-    "    return(to_MeV(Edot_IE))"
+    "    return(to_MeV(Edot_IE))\n",
+    "\n",
+    "def IE_Bethe(E_beta, I_bar, v_beta, n_eb, chi=1, get_name=False):\n",
+    "    '''Returns beta_particle losses due to ionization and excitation\n",
+    "    of atomic electrons (MeV/s).\n",
+    "    From the Bethe formula as reported in Kasen&Barnes2019 eq. 5.\n",
+    "    args:\n",
+    "    E_beta = beta-particle kinetic energy (MeV)\n",
+    "    chi = effective ionization potential (=1 for non-relativistic e-)\n",
+    "    v_beta = beta-particle speed (cm/s)\n",
+    "    n_eb = bound electron number density (cm-3) \n",
+    "    '''\n",
+    "    \n",
+    "    _ = I_bar\n",
+    "    \n",
+    "    if get_name:\n",
+    "        return(\"IE_Bethe\")\n",
+    "    \n",
+    "    cst = np.pi * e_**4 / m_e_\n",
+    "    Edot = cst * n_eb / v_beta * np.log(E_beta/chi)\n",
+    "    return(Edot)\n",
+    "    "
    ]
   },
   {
@@ -175,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "id": "71f052d1",
    "metadata": {},
    "outputs": [],
@@ -202,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 5,
    "id": "c4d84527",
    "metadata": {},
    "outputs": [],
@@ -245,7 +274,7 @@
     "    return(phirad_interp(E_beta))\n",
     "\n",
     "\n",
-    "def Brem_losses(n_i, v_beta, E_beta, Z):\n",
+    "def Brem_Barnes(n_i, v_beta, E_beta, Z, get_name=False):\n",
     "    ''' Returns losses due to Bremsstrahlung from \n",
     "    Barnes&Kasen2016 eq.13 (MeV)\n",
     "    n_i = number density of the scattering species (cm-3)\n",
@@ -256,8 +285,33 @@
     "        (characteristic outer ejecta values, two components\n",
     "        Z = 1; A = 1 (hydrogen) and Z = 55; A = 133 (heavier elems))\n",
     "    '''\n",
+    "    \n",
+    "    if get_name:\n",
+    "        return(\"Brem_Barnes\")\n",
+    "    \n",
     "    E_dot = (n_i * v_beta * (to_erg(E_beta) + m_e_*c_**2)\n",
     "             * Z**2 * r_0_**2 * alpha_ * phirad(E_beta, Z))\n",
+    "    return(to_MeV(E_dot))\n",
+    "\n",
+    "\n",
+    "def Brem_Bethe(N, v_beta, E_beta, Z, get_name=False):\n",
+    "    '''Returns losses due to Bremsstrahlung from Bethe&Heitler1934\n",
+    "    as reported in Longair2012 eq 6.74.\n",
+    "    N = number density of the scattering species (cm-3)\n",
+    "    E_beta = Beta particle kinetic energy (MeV)\n",
+    "    Z = Atomic number \n",
+    "        (characteristic inner ejecta values Z = 60; A = 144)\n",
+    "        (characteristic outer ejecta values, two components\n",
+    "        Z = 1; A = 1 (hydrogen) and Z = 55; A = 133 (heavier elems))\n",
+    "    '''\n",
+    "\n",
+    "    _ = v_beta\n",
+    "    \n",
+    "    if get_name:\n",
+    "        return(\"Brem_Bethe\")\n",
+    "\n",
+    "    a = e_**6 /(16 * (np.pi*eps_0_)**3 * m_e_**2*c_**4*h_bar_)\n",
+    "    E_dot = a * Z*(Z+1.3) * N * to_erg(E_beta) * (np.log(183./Z**(1./3.)) + 1./8.)\n",
     "    return(to_MeV(E_dot))"
    ]
   },
@@ -278,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 6,
    "id": "da1d4ca1",
    "metadata": {},
    "outputs": [
@@ -308,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 7,
    "id": "a060744d",
    "metadata": {},
    "outputs": [],
@@ -327,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 8,
    "id": "d0738858",
    "metadata": {},
    "outputs": [],
@@ -359,28 +413,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 9,
    "id": "1365a0be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_rates(T, rho, B, Z, A):\n",
+    "def plot_rates(T, rho, B, Z, A, Brem=[Brem_Barnes], IE=[IE_Barnes]):\n",
     "    \n",
     "    n_eb = calc_n_eb(rho, Z/A)\n",
     "    n_e = rho / m_p_ *1.e-3\n",
     "    \n",
     "    plasma = plasma_losses(E_beta, n_e, T) / rho\n",
-    "    IE = IE_losses(E_beta, Ibar, v_beta, n_eb) / rho\n",
     "    synch = synch_losses(v_beta, B) / rho\n",
-    "    Brem = Brem_losses(n_i, v_beta, E_beta, Z) / rho\n",
-    "    tot = plasma + IE + synch + Brem\n",
+    "    \n",
+    "    IEs = [f(E_beta, Ibar, v_beta, n_eb) / rho for f in IE]\n",
+    "    IEs_names = [f(E_beta, Ibar, v_beta, n_eb, get_name=True) for f in IE]\n",
+    "    Brems = [f(n_i, v_beta, E_beta, Z) / rho for f in Brem]\n",
+    "    Brems_names = [f(n_i, v_beta, E_beta, Z, get_name=True) for f in Brem]\n",
     "    \n",
     "    plt.figure()\n",
     "    plt.plot(E_beta, plasma, label='plasma')\n",
-    "    plt.plot(E_beta, IE, label = 'IE')\n",
     "    plt.plot(E_beta, synch, label = 'synchrotron')\n",
-    "    plt.plot(E_beta, Brem, label='Bremsstrahlung')\n",
-    "    plt.plot(E_beta, tot, label='total')\n",
+    "    \n",
+    "    [plt.plot(E_beta, loss, label=name) for loss, name in zip(IEs, IEs_names)]\n",
+    "    [plt.plot(E_beta, loss, label=name) for loss, name in zip(Brems, Brems_names)]\n",
     "\n",
     "    plt.xscale('log')\n",
     "    plt.yscale('log')\n",
@@ -390,14 +446,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 10,
    "id": "0cacf8f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01f3963bb436454b8cdc1bb8f8ac5168",
+       "model_id": "f26fe69b06c2428a99867ca4703e2326",
        "version_major": 2,
        "version_minor": 0
       },
@@ -411,7 +467,7 @@
    ],
    "source": [
     "%matplotlib widget\n",
-    "plot_rates(T, rho, B, Z, A)"
+    "plot_rates(T, rho, B, Z, A, Brem=[Brem_Barnes, Brem_Bethe], IE=[IE_Barnes, IE_Bethe])"
    ]
   },
   {
@@ -430,14 +486,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 15,
    "id": "d23eedd5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78b07a5813e147be87766a418c124a30",
+       "model_id": "f37efd360e0c41e6a46b896784efe8d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -456,12 +512,20 @@
     "Tpe = widgets.Select(description='Ejecta type', \n",
     "                     options=['Hydrogen', 'Inner ejecta'], \n",
     "                     value='Inner ejecta')\n",
+    "IE = widgets.SelectMultiple(description='IE_losses',\n",
+    "                            options=['Barnes', 'Bethe'],\n",
+    "                            value=['Barnes'])\n",
+    "Brem = widgets.SelectMultiple(description='Bremsstrahlung',\n",
+    "                              options=['Barnes', 'Bethe'],\n",
+    "                              value=['Barnes'])\n",
+    "\n",
     "T = widgets.FloatLogSlider(description='T', min=-10, max=0, value=1.e-6, step=1)\n",
     "rho = widgets.FloatLogSlider(description='rho', min=-18, max=-10, value=1.e-14, step=1)\n",
     "B = widgets.FloatLogSlider(description='B', min=-10, max=5, value=1.e-6, step=1)\n",
     "Z = widgets.Dropdown(description='Z', options=[1,60], value=60)\n",
     "A = widgets.Dropdown(description='A', options=[1,133,144], value=144)\n",
-    "params_ui = widgets.VBox([Tpe, T, rho, B, Z, A])\n",
+    "params_ui = widgets.VBox([Tpe, Brem, IE,\n",
+    "                          T, rho, B, Z, A])\n",
     "\n",
     "def update_Z_A(*args):\n",
     "    if Tpe.value == 'Hydrogen':\n",
@@ -475,10 +539,17 @@
     "        A.value = 133\n",
     "Tpe.observe(update_Z_A, 'value')\n",
     "\n",
-    "def update(Tpe, T, rho, B, Z, A):\n",
-    "    plot_rates(T, rho, B, Z, A)\n",
+    "def update(Tpe, T, rho, B, Z, A, Brem, IE):\n",
+    "    \n",
+    "    Brem_dict = {\"Barnes\":Brem_Barnes, \"Bethe\":Brem_Bethe}\n",
+    "    Brem_opt = [Brem_dict[b] for b in Brem]\n",
+    "    IE_dict = {\"Barnes\":IE_Barnes, \"Bethe\":IE_Bethe}\n",
+    "    IE_opt = [IE_dict[i] for i in IE]\n",
+    "    \n",
+    "    plot_rates(T, rho, B, Z, A, Brem=Brem_opt, IE=IE_opt)\n",
     "        \n",
-    "out = widgets.interactive_output(update, {'Tpe':Tpe, 'T': T, 'rho': rho, 'B': B, 'Z':Z, 'A':A})\n",
+    "out = widgets.interactive_output(update, \n",
+    "                                 {'Tpe':Tpe, 'T': T, 'rho': rho, 'B': B, 'Z':Z, 'A':A, 'Brem':Brem, 'IE':IE})\n",
     "\n",
     "ui = widgets.HBox([out, params_ui])\n",
     "display(ui)\n"
@@ -510,8 +581,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3279651f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Barnes',)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Brem.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d86fad24",
    "metadata": {},
    "outputs": [],
    "source": []
