Corrected Bethe IE losses

--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "f1c1b1b9",
    "metadata": {},
    "outputs": [],
@@ -187,9 +187,10 @@
     "    if get_name:\n",
     "        return(\"IE_Bethe\")\n",
     "    \n",
-    "    cst = np.pi * e_**4 / m_e_\n",
-    "    Edot = cst * n_eb / v_beta * np.log(E_beta/chi)\n",
-    "    return(Edot)\n",
+    "    E_beta_tot = m_e_ * c_**2 + to_erg(E_beta)  # total energy\n",
+    "    cst = - np.pi * e_**4 / m_e_\n",
+    "    Edot = cst * n_eb / v_beta * np.log(E_beta_tot/chi)\n",
+    "    return(to_MeV(Edot))\n",
     "    "
    ]
   },
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "71f052d1",
    "metadata": {},
    "outputs": [],
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "c4d84527",
    "metadata": {},
    "outputs": [],
@@ -297,6 +298,7 @@
     "def Brem_Bethe(N, v_beta, E_beta, Z, get_name=False):\n",
     "    '''Returns losses due to Bremsstrahlung from Bethe&Heitler1934\n",
     "    as reported in Longair2012 eq 6.74.\n",
+    "    This only includes ionization.\n",
     "    N = number density of the scattering species (cm-3)\n",
     "    E_beta = Beta particle kinetic energy (MeV)\n",
     "    Z = Atomic number \n",
@@ -332,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "id": "da1d4ca1",
    "metadata": {},
    "outputs": [
@@ -362,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "id": "a060744d",
    "metadata": {},
    "outputs": [],
@@ -381,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "id": "d0738858",
    "metadata": {},
    "outputs": [],
@@ -413,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "id": "1365a0be",
    "metadata": {},
    "outputs": [],
@@ -446,14 +448,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "id": "0cacf8f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f26fe69b06c2428a99867ca4703e2326",
+       "model_id": "5e2fe1167511421e8ccc9bcdee93d426",
        "version_major": 2,
        "version_minor": 0
       },
@@ -486,14 +488,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "id": "d23eedd5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f37efd360e0c41e6a46b896784efe8d0",
+       "model_id": "6b6cfc2ecb02486ca6e67450228f7617",
        "version_major": 2,
        "version_minor": 0
       },
@@ -581,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "3279651f",
    "metadata": {},
    "outputs": [
@@ -591,7 +593,7 @@
        "('Barnes',)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d86fad24",
+   "id": "e86cbe9f",
    "metadata": {},
    "outputs": [],
    "source": []
