--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -26,10 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "802f7e15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/elay7268/opt/miniconda3/envs/elec_degrad/lib/python3.7/site-packages/ipykernel_launcher.py:17: UserWarning: Style includes a parameter, 'backend', that is not related to style.  Ignoring\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "This code outputs the energy loss rates following Barnes&Kasen2016\n",
@@ -46,6 +54,8 @@
     "from scipy.interpolate import interp1d\n",
     "import sys\n",
     "import textwrap\n",
+    "import matplotlib.style as style\n",
+    "style.use('special')\n",
     "\n",
     "# Constants\n",
     "e_ = 4.80320425e-10 # elementary charge (statcoulomb) (CGS)\n",
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a9b43ac5",
    "metadata": {},
    "outputs": [],
@@ -132,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "f1c1b1b9",
    "metadata": {},
    "outputs": [],
@@ -205,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "71f052d1",
    "metadata": {},
    "outputs": [],
@@ -232,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "id": "c4d84527",
    "metadata": {},
    "outputs": [],
@@ -312,8 +322,9 @@
     "    if get_name:\n",
     "        return(\"Brem_Bethe\")\n",
     "\n",
+    "    E_beta_tot = m_e_ *c_**2 + to_erg(E_beta)\n",
     "    a = e_**6 /(16 * (np.pi*eps_0_)**3 * m_e_**2*c_**4*h_bar_)\n",
-    "    E_dot = a * Z*(Z+1.3) * N * to_erg(E_beta) * (np.log(183./Z**(1./3.)) + 1./8.)\n",
+    "    E_dot = a * Z*(Z+1.3) * N * E_beta_tot * (np.log(183./Z**(1./3.)) + 1./8.)\n",
     "    return(to_MeV(E_dot))"
    ]
   },
@@ -334,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "id": "da1d4ca1",
    "metadata": {},
    "outputs": [
@@ -364,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "id": "a060744d",
    "metadata": {},
    "outputs": [],
@@ -383,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "id": "d0738858",
    "metadata": {},
    "outputs": [],
@@ -415,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "id": "1365a0be",
    "metadata": {},
    "outputs": [],
@@ -434,11 +445,13 @@
     "    Brems_names = [f(n_i, v_beta, E_beta, Z, get_name=True) for f in Brem]\n",
     "    \n",
     "    plt.figure()\n",
-    "    plt.plot(E_beta, plasma, label='plasma')\n",
-    "    plt.plot(E_beta, synch, label = 'synchrotron')\n",
+    "    plt.plot(E_beta, plasma, c='C0', label='plasma')\n",
+    "    plt.plot(E_beta, synch, c='C1', label = 'synchrotron')\n",
     "    \n",
-    "    [plt.plot(E_beta, loss, label=name) for loss, name in zip(IEs, IEs_names)]\n",
-    "    [plt.plot(E_beta, loss, label=name) for loss, name in zip(Brems, Brems_names)]\n",
+    "    styles = ['-', '--', ':']\n",
+    "    \n",
+    "    [plt.plot(E_beta, loss, c='C2', ls=style, label=name) for loss, name, style in zip(IEs, IEs_names, styles)]\n",
+    "    [plt.plot(E_beta, loss, c='C3', ls=style, label=name) for loss, name, style in zip(Brems, Brems_names, styles)]\n",
     "\n",
     "    plt.xscale('log')\n",
     "    plt.yscale('log')\n",
@@ -448,14 +461,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "id": "0cacf8f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e2fe1167511421e8ccc9bcdee93d426",
+       "model_id": "73653e49db27458f90e3eeb2eaac70e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -488,14 +501,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "id": "d23eedd5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b6cfc2ecb02486ca6e67450228f7617",
+       "model_id": "9fe9ccb5a4364155819f4412257b51b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -583,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "3279651f",
    "metadata": {},
    "outputs": [
@@ -593,7 +606,7 @@
        "('Barnes',)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
