Agreement between Barnes and Bethe (as reported in Longair)

--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 147,
    "id": "802f7e15",
    "metadata": {},
    "outputs": [
@@ -68,6 +68,7 @@
     "kB_ = 8.617333262145e-11  # Boltzmann constant (MeV/K)\n",
     "Msun_ = 2.0e33 # Solar mass (g)\n",
     "r_0_ = 1.8e-13 # nuclear radius coef for deformed post-scission nuclei (cm)\n",
+    "r_e_ = 2.9e-13 # classical electron radius (cm)\n",
     "alpha_ = 1./137. # fine structure constant \n",
     "h_bar_ = 1.0546e-27 # reduced plank constant (cm2 g s-1) (CGS)\n",
     "eps_0_ = 1. # vacuum permittivity (unity in CGS)\n",
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 148,
    "id": "a9b43ac5",
    "metadata": {},
    "outputs": [],
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 149,
    "id": "f1c1b1b9",
    "metadata": {},
    "outputs": [],
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 150,
    "id": "71f052d1",
    "metadata": {},
    "outputs": [],
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 151,
    "id": "c4d84527",
    "metadata": {},
    "outputs": [],
@@ -285,7 +286,7 @@
     "    return(phirad_interp(E_beta))\n",
     "\n",
     "\n",
-    "def Brem_Barnes(n_i, v_beta, E_beta, Z, get_name=False):\n",
+    "def Brem_Barnes(n_i, v_beta, E_beta, Z, Z_charge, get_name=False):\n",
     "    ''' Returns losses due to Bremsstrahlung from \n",
     "    Barnes&Kasen2016 eq.13 (MeV)\n",
     "    n_i = number density of the scattering species (cm-3)\n",
@@ -297,35 +298,74 @@
     "        Z = 1; A = 1 (hydrogen) and Z = 55; A = 133 (heavier elems))\n",
     "    '''\n",
     "    \n",
+    "    _ = Z_charge\n",
+    "    \n",
     "    if get_name:\n",
     "        return(\"Brem_Barnes\")\n",
     "    \n",
     "    E_dot = (n_i * v_beta * (to_erg(E_beta) + m_e_*c_**2)\n",
-    "             * Z**2 * r_0_**2 * alpha_ * phirad(E_beta, Z))\n",
+    "             * Z**2 * r_e_**2 * alpha_ * phirad(E_beta, Z))\n",
+    "#     E_dot = (n_i * v_beta * (to_erg(E_beta) + m_e_*c_**2)\n",
+    "#              * Z**2 * r_0_**2 * alpha_ * phirad(E_beta, Z))\n",
     "    return(to_MeV(E_dot))\n",
     "\n",
     "\n",
-    "def Brem_Bethe(N, v_beta, E_beta, Z, get_name=False):\n",
+    "def Brem_Bethe(N, v_beta, E_beta, Z, Z_charge, get_name=False):\n",
     "    '''Returns losses due to Bremsstrahlung from Bethe&Heitler1934\n",
     "    as reported in Longair2012 eq 6.74.\n",
     "    This only includes ionization.\n",
     "    N = number density of the scattering species (cm-3)\n",
     "    E_beta = Beta particle kinetic energy (MeV)\n",
-    "    Z = Atomic number \n",
-    "        (characteristic inner ejecta values Z = 60; A = 144)\n",
-    "        (characteristic outer ejecta values, two components\n",
-    "        Z = 1; A = 1 (hydrogen) and Z = 55; A = 133 (heavier elems))\n",
+    "    Z_charge = charge of the nucleus (not the atom) (units of e_)\n",
+    "               (it is identical to the atomic number Z)\n",
     "    '''\n",
     "\n",
     "    _ = v_beta\n",
+    "    _ = Z\n",
     "    \n",
     "    if get_name:\n",
     "        return(\"Brem_Bethe\")\n",
     "\n",
-    "    E_beta_tot = m_e_ *c_**2 + to_erg(E_beta)\n",
+    "    E_beta_tot = m_e_*c_**2 + to_erg(E_beta)\n",
     "    a = e_**6 /(16 * (np.pi*eps_0_)**3 * m_e_**2*c_**4*h_bar_)\n",
-    "    E_dot = a * Z*(Z+1.3) * N * E_beta_tot * (np.log(183./Z**(1./3.)) + 1./8.)\n",
-    "    return(to_MeV(E_dot))"
+    "    E_dot = a * Z_charge*(Z_charge+1.3) * N * E_beta_tot * (np.log(183./(Z_charge**(1./3.))) + 1./8.)\n",
+    "    return(to_MeV(E_dot))\n",
+    "\n",
+    "\n",
+    "def Brem_Bethe_SI(N, v_beta, E_beta, Z, Z_charge, get_name=False):\n",
+    "    '''Returns losses due to Bremsstrahlung from Bethe&Heitler1934\n",
+    "    as reported in Longair2012 eq 6.74.\n",
+    "    This only includes ionization.\n",
+    "    N = number density of the scattering species (cm-3)\n",
+    "    E_beta = Beta particle kinetic energy (MeV)\n",
+    "    Z_charge = charge of the nucleus (not the atom) (units of e_)\n",
+    "               (it is identical to the atomic number Z)\n",
+    "    '''\n",
+    "\n",
+    "    _ = v_beta\n",
+    "    _ = Z\n",
+    "    \n",
+    "    if get_name:\n",
+    "        return(\"Brem_Bethe_SI\")\n",
+    "    \n",
+    "    erg_to_SI = lambda E : E * 1.e-7\n",
+    "    SI_to_erg = lambda E : E * 1.e7\n",
+    "    \n",
+    "    N_SI = N * 1.e6\n",
+    "    \n",
+    "    eps_0_SI_ = 8.8542e-12 # C2 m-2 N-1\n",
+    "    m_e_SI_ = m_e_ * 1.e-3\n",
+    "    c_SI_ = c_ * 1.e-2\n",
+    "    e_SI_ = 1.6022e-19 # C\n",
+    "    h_bar_SI_ = 6.6261e-34 / (2.*np.pi) # J s\n",
+    "    \n",
+    "    E_beta_tot = erg_to_SI(m_e_*c_**2 + to_erg(E_beta))\n",
+    "    a = e_SI_**6 /(16 * (np.pi*eps_0_SI_)**3 * m_e_SI_**2*c_SI_**4*h_bar_SI_)\n",
+    "    gaunt = (np.log(183./(Z_charge**(1./3.))) + 1./8.)\n",
+    "    lfac = 1 / np.sqrt(1 - (v_beta/c_)**2)\n",
+    "#     gaunt = np.log(lfac) + 0.36\n",
+    "    E_dot = a * Z_charge*(Z_charge+1.3) * N_SI * E_beta_tot * gaunt\n",
+    "    return(to_MeV(SI_to_erg(E_dot)))"
    ]
   },
   {
@@ -345,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 152,
    "id": "da1d4ca1",
    "metadata": {},
    "outputs": [
@@ -375,13 +415,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 153,
    "id": "a060744d",
    "metadata": {},
    "outputs": [],
    "source": [
     "A = 144 # inner ejecta\n",
-    "n_i = rho_ej / (A*m_p_)"
+    "n_i = rho_ej / (A*m_p_)  # number density of scattering species (nuclei)"
    ]
   },
   {
@@ -394,14 +434,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 154,
    "id": "d0738858",
    "metadata": {},
    "outputs": [],
    "source": [
-    "E_beta = np.logspace(-2, 1, 100) # particle kinetic energy (MeV)\n",
+    "E_beta = np.logspace(-2, 4, 100) # particle kinetic energy (MeV)\n",
     "T = 1e-6 # MeV\n",
-    "Z = 60  # for inner ejecta\n",
+    "Z = 60   # for inner ejecta\n",
     "A = 144  #for inner ejecta\n",
     "\n",
     "n_e = rho_ej / (A * m_p_) * (1./Z)  # number density of bound electrons\n",
@@ -426,23 +466,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 155,
    "id": "1365a0be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_rates(T, rho, B, Z, A, Brem=[Brem_Barnes], IE=[IE_Barnes]):\n",
+    "def plot_rates(T, rho, B, Z, Z_charge, A, Brem=[Brem_Barnes], IE=[IE_Barnes]):\n",
     "    \n",
     "    n_eb = calc_n_eb(rho, Z/A)\n",
-    "    n_e = rho / m_p_ *1.e-3\n",
+    "    n_e = rho / m_p_ * 1.e-3\n",
     "    \n",
     "    plasma = plasma_losses(E_beta, n_e, T) / rho\n",
     "    synch = synch_losses(v_beta, B) / rho\n",
     "    \n",
     "    IEs = [f(E_beta, Ibar, v_beta, n_eb) / rho for f in IE]\n",
     "    IEs_names = [f(E_beta, Ibar, v_beta, n_eb, get_name=True) for f in IE]\n",
-    "    Brems = [f(n_i, v_beta, E_beta, Z) / rho for f in Brem]\n",
-    "    Brems_names = [f(n_i, v_beta, E_beta, Z, get_name=True) for f in Brem]\n",
+    "    Brems = [f(n_i, v_beta, E_beta, Z, Z_charge) / rho for f in Brem]\n",
+    "    Brems_names = [f(n_i, v_beta, E_beta, Z, Z_charge, get_name=True) for f in Brem]\n",
     "    \n",
     "    plt.figure()\n",
     "    plt.plot(E_beta, plasma, c='C0', label='plasma')\n",
@@ -461,14 +501,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 156,
    "id": "0cacf8f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73653e49db27458f90e3eeb2eaac70e2",
+       "model_id": "2514eedf35fd4c3db351488f275ee889",
        "version_major": 2,
        "version_minor": 0
       },
@@ -482,7 +522,37 @@
    ],
    "source": [
     "%matplotlib widget\n",
-    "plot_rates(T, rho, B, Z, A, Brem=[Brem_Barnes, Brem_Bethe], IE=[IE_Barnes, IE_Bethe])"
+    "Z_charge = Z\n",
+    "plot_rates(T, rho, B, Z, Z_charge, A, Brem=[Brem_Barnes, Brem_Bethe_SI], IE=[IE_Barnes, IE_Bethe])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "84c73e1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "37f9dab88a2c424cb2c34c7cb6af02be",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%matplotlib widget\n",
+    "ratio = Brem_Bethe_SI(n_i, v_beta, E_beta, Z, Z_charge) / Brem_Barnes(n_i, v_beta, E_beta, Z, Z_charge)\n",
+    "plt.plot(E_beta, ratio)\n",
+    "plt.xscale('log')\n",
+    "plt.yscale('log')"
    ]
   },
   {
@@ -501,14 +571,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "d23eedd5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fe9ccb5a4364155819f4412257b51b7",
+       "model_id": "971905a6218d4d1ab7e8c971d6d062ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -531,7 +601,7 @@
     "                            options=['Barnes', 'Bethe'],\n",
     "                            value=['Barnes'])\n",
     "Brem = widgets.SelectMultiple(description='Bremsstrahlung',\n",
-    "                              options=['Barnes', 'Bethe'],\n",
+    "                              options=['Barnes', 'Bethe', 'Bethe_SI'],\n",
     "                              value=['Barnes'])\n",
     "\n",
     "T = widgets.FloatLogSlider(description='T', min=-10, max=0, value=1.e-6, step=1)\n",
@@ -556,12 +626,12 @@
     "\n",
     "def update(Tpe, T, rho, B, Z, A, Brem, IE):\n",
     "    \n",
-    "    Brem_dict = {\"Barnes\":Brem_Barnes, \"Bethe\":Brem_Bethe}\n",
+    "    Brem_dict = {\"Barnes\":Brem_Barnes, \"Bethe\":Brem_Bethe, \"Bethe_SI\":Brem_Bethe_SI}\n",
     "    Brem_opt = [Brem_dict[b] for b in Brem]\n",
     "    IE_dict = {\"Barnes\":IE_Barnes, \"Bethe\":IE_Bethe}\n",
     "    IE_opt = [IE_dict[i] for i in IE]\n",
     "    \n",
-    "    plot_rates(T, rho, B, Z, A, Brem=Brem_opt, IE=IE_opt)\n",
+    "    plot_rates(T, rho, B, Z, Z, A, Brem=Brem_opt, IE=IE_opt)\n",
     "        \n",
     "out = widgets.interactive_output(update, \n",
     "                                 {'Tpe':Tpe, 'T': T, 'rho': rho, 'B': B, 'Z':Z, 'A':A, 'Brem':Brem, 'IE':IE})\n",
@@ -596,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "3279651f",
    "metadata": {},
    "outputs": [
@@ -606,7 +676,7 @@
        "('Barnes',)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
