Chagne on treatmenet of alphas

--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c598ad2a",
+   "id": "0c253f2c",
    "metadata": {},
    "source": [
     "## Fixed parameters"
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "d5755c41",
+   "id": "c683a9a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,10 +756,8 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e12feb72",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "id": "85cf9ed2",
+   "metadata": {},
    "source": [
     "## Functions used for visualisation"
    ]
@@ -768,9 +766,7 @@
    "cell_type": "code",
    "execution_count": 170,
    "id": "480a4fc3",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -781,11 +777,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 192,
    "id": "1165cacb",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Ts = np.logspace(-6, 0, 30)\n",
@@ -814,6 +808,7 @@
     "    rho_arr = np.array([[rho for T in Ts] for rho in rhos])\n",
     "    procs = np.array([[processes(E_beta_hm, T, rho, B, Z, Z_charge, A, Brem, IE) for T in Ts] for rho in rhos])\n",
     "    normprocs = procs/np.max(procs, axis=2, keepdims=True)\n",
+    "    normprocs = normprocs/np.sum(normprocs, axis=2, keepdims=True)\n",
     "    \n",
     "    from plotly.subplots import make_subplots\n",
     "\n",
@@ -837,11 +832,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "325c24de",
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 193,
+   "id": "3bfe05a6",
+   "metadata": {},
    "outputs": [],
    "source": [
     "Tpe = widgets.Select(description='Ejecta type', \n",
@@ -904,7 +897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e22e662e",
+   "id": "a2c12014",
    "metadata": {},
    "source": [
     "## Visualisation\n",
@@ -916,14 +909,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 194,
    "id": "e86cbe9f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1c2cfde50174a6fa105780df1d74743",
+       "model_id": "3652c1c9c658403ab3b009831bc2fa5b",
        "version_major": 2,
        "version_minor": 0
       },
